Kubernetes/nginx-tainted-node.yaml
# nginx-tolerated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-tolerated
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      tolerations:
      - key: "app"
        operator: "Equal"
        value: "nginx"
        effect: "NoSchedule"  # NoSchedule or
      containers:
      - name: nginx
        image: nginx:alpine
