Kubernetes/nginx_serving_offline.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: serving-offline
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: serving-offline-account
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
